--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  
  <body background='https://cdn.wallpapersafari.com/21/60/dXftjm.jpg'>    
      
-	<a href='file:///C:/Users/lenovo/Desktop/DB%20Group%20Official/New%20Text%20Document.html'><img src='home.png' align='left' width='150px'></a>
+	<a href='https://dananjaya43.github.io/DB.com/'><img src='home.png' align='left' width='150px'></a>
 	                                                                                           <img src='home.png' align='right' width='150px'>
 	<center><img border="5"src='1.jpg'width='200' height='200'/></center>
 	   
